# factory-p1-loop

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: automerge.yml  ci.yml
docs/merge-tests/: test-a.md  test-b.md
tests/: test_stats.py
textstats/: __init__.py  __main__.py  stats.py
